# Projects

./: .gitignore  README.md  test-magit.c
Bash/: README.md  arrow_key_selector.bash
Bash/CustomScripts/: README.md  haveYouUsed.bash
Bash/Games/: banner_clock.bash  test.bash
Bash/Games/Snake/: splash.sh
C/: README.md  clientTCP.c
C/Deutsch-Project/: AWS-utils.c  AWS-utils.h  AWS.c  Makefile  ServerA-utils.c  ServerA-utils.h  ServerA.c  ServerB-utils.c  ServerB-utils.h  ServerB.c  client-utils.c  client-utils.h  client.c  djikstra.c  djikstra.h  map.txt  readfile.cpp  serverTCP.c  shortest-path-tree.c  shortest-path-tree.h
C/SendEncryptedMsg/: client.c  server.c
C/modes-of-operation/: Makefile  TEST-ANY-MODE.c  utils-all-modes.c  utils-all-modes.h  utils.c  utils.h
C/slc/hdr/: ast.h  (+11 more)
C/smpl-lang-compiler/: Makefile
C/socket_progs/: Makefile  clientUDP.c  proxy-echo-serverTCP.c  serverTCP.c  serverUDP.c  showip.c
JS/: README.md
JS/FILE-TEMPLATES/: index.html  styles.css
JS/change-background-color/: app.js  index.html  w3color.js
JS/random-background-color-button/: app.js  index.html  named-colors.js
JS/random-background-hexcolor-button/: app.js  index.html  style.css
JS/roygibv-background-color-slider/: index.html  style.css
JS/todo-list/: index.html
Python/: README.md
Rust/: README.md
Rust/Games/snake_using_piston/: Cargo.toml
Rust/Games/snake_using_piston/src/: food.rs  game.rs  lib.rs  main.rs  snake.rs  splash.rs
Rust/smpl-lang-compiler/: Cargo.toml
Solidity/: README.md
Solidity/contracts/: EffConv.sol
Swift/: README.md
(+303 files in other folders)
